fix: katex overflow

--- a/packages/zenn-content-css/src/_embed.scss
+++ b/packages/zenn-content-css/src/_embed.scss
@@ -41,7 +41,8 @@
 }
 
 // prevent katex overflow
-eqn {
+eqn,
+.zenn-katex {
   display: block;
   overflow-x: auto;
 }
